# jobmcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  models.py  repository.py  seed_data.py
scripts/: seed_mock_data.py  smoke_test.py
scripts/valkey_queries/: README.md  common.py  get_raw_key.py  list_keys.py  show_applications.py  show_companies.py  show_company_jobs.py  show_jobs.py
tests/: conftest.py  test_repository.py  test_tools.py
