[project]
name = "jobmcp"
version = "0.1.0"
description = "Mock MCP job-search server backed by Valkey."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastmcp==3.2.4",
  "valkey==6.1.1",
]

[dependency-groups]
dev = [
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
]

[project.scripts]
jobmcp = "app.main:cli"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
